force-app/main/default/objects/DepartmentCourseGroupLesson__c/DepartmentCourseGroupLesson__c.object-meta.xml
<CustomObject>
    <label>Department Course Group Lesson</label>
    <nameField>
        <displayFormat>DCGL-{0000}</displayFormat>
        <label>Department Course Group Lesson Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Department Course Group Lessons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>