force-app/main/default/objects/DepartmentCourseGroupLesson__c/fields/AttendingStudents__c.field-meta.xml
<CustomField>
    <fullName>AttendingStudents__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>This field is auto-populated</inlineHelpText>
    <label>Attending Students</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>