force-app/main/default/objects/DepartmentCourseGroupLesson__c/fields/CourseName__c.field-meta.xml
<CustomField>
    <fullName>CourseName__c</fullName>
    <formula>Course__r.Name</formula>
    <label>Course Name</label>
    <type>Text</type>
</CustomField>