force-app/main/default/objects/DepartmentCourseGroupLesson__c/fields/EndDateTime__c.field-meta.xml
<CustomField>
    <fullName>EndDateTime__c</fullName>
    <formula>Lesson__r.EndDateTime__c</formula>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>