force-app/main/default/objects/DepartmentCourseGroupLesson__c/fields/Lesson__c.field-meta.xml
<CustomField>
    <fullName>Lesson__c</fullName>
    <label>Lesson</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Lesson__c.IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Lesson__c</referenceTo>
    <relationshipLabel>Groups</relationshipLabel>
    <relationshipName>DepartmentCourseGroupLessons</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>