force-app/main/default/objects/DepartmentCourseGroupLesson__c/fields/StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>StartDateTime__c</fullName>
    <formula>Lesson__r.StartDateTime__c</formula>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>