force-app/main/default/objects/DepartmentCourseGroupLesson__c/fields/StudentGroup__c.field-meta.xml
<CustomField>
    <fullName>StudentGroup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Student Group</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Cannot add classes to inactive student group</errorMessage>
        <filterItems>
            <field>StudentGroup__c.IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>StudentGroup__c</referenceTo>
    <relationshipLabel>Lessons</relationshipLabel>
    <relationshipName>DepartmentCourseGroupLessons</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>