force-app/main/default/objects/DepartmentCourseGroupLesson__c/fields/StudentGroupID__c.field-meta.xml
<CustomField>
    <fullName>StudentGroupID__c</fullName>
    <formula>StudentGroup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Group ID</label>
    <type>Text</type>
</CustomField>