force-app/main/default/objects/DepartmentCourseGroupLesson__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>TEXT(Lesson__r.Type__c)</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>