force-app/main/default/objects/DepartmentCourseGroupLesson__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>StudentGroup__c</columns>
    <columns>Lesson__c</columns>
    <columns>Course__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>