force-app/main/default/objects/DepartmentCourseGroupLesson__c/listViews/UNI_4_1.listView-meta.xml
<ListView>
    <fullName>UNI_4_1</fullName>
    <columns>NAME</columns>
    <columns>StudentGroup__c</columns>
    <columns>Course__c</columns>
    <columns>Type__c</columns>
    <columns>Lesson__c</columns>
    <columns>StartDateTime__c</columns>
    <columns>EndDateTime__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>StudentGroupID__c</field>
        <operation>equals</operation>
        <value>a0509000000HqrN</value>
    </filters>
    <label>УНИ 4-1</label>
    <sharedTo>
        <group>UNI_4_1</group>
    </sharedTo>
</ListView>